# xavier-nx_setup

./: README.md  serial_test.py  setup_SDKmanager.md  uart_thread.py  xavierNx2pi4.py
comm/c-lang/: CommThread.cpp  CommThread.h  rs232.c  rs232.h  uclsCRC8.cpp  uclsCRC8.h
comm/c-lang/rs232/: CMakeCache.txt  CMakeLists.txt  Makefile  app  cmake_install.cmake  demo_main.c  demo_rx.c  rs232.c
sort_yolo/output/: PETS09-S2L1.txt
